--- a/AudioShare/Player/PlayerViewController.xib
+++ b/AudioShare/Player/PlayerViewController.xib
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="7706" systemVersion="14C1510" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
+        <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7703"/>
     </dependencies>
     <objects>
@@ -8,14 +9,16 @@
             <connections>
                 <outlet property="autoShutdown" destination="aEG-Hz-PI2" id="LqC-iU-FDW"/>
                 <outlet property="backButton" destination="69O-Yv-QD7" id="lin-je-cDa"/>
+                <outlet property="contentImageView" destination="t5w-1p-b2u" id="8ex-ZS-2Ey"/>
                 <outlet property="historyButton" destination="4Qd-Ej-hIg" id="RGB-OP-c1y"/>
+                <outlet property="listButton" destination="EIH-rs-s9y" id="UZx-sL-8jp"/>
                 <outlet property="nextButton" destination="245-wy-SYD" id="G7F-RP-ii6"/>
                 <outlet property="playButton" destination="mxg-bV-73w" id="78B-QS-WKY"/>
                 <outlet property="preButton" destination="D5s-b6-nFH" id="wqp-On-opb"/>
-                <outlet property="timeGoingLabel" destination="pEq-d0-Dot" id="KvH-De-BtT"/>
+                <outlet property="timeGoingLabel" destination="pEq-d0-Dot" id="FVG-vb-IHa"/>
                 <outlet property="timeGoingSlider" destination="09b-SZ-6Nf" id="9c6-Ed-8uc"/>
-                <outlet property="titleLabel" destination="ise-wd-RXI" id="FpQ-sX-vqg"/>
-                <outlet property="totalTimeLabel" destination="hkC-hQ-dE3" id="Hzs-pt-Rfa"/>
+                <outlet property="titleLabel" destination="ise-wd-RXI" id="ul3-Sa-I87"/>
+                <outlet property="totalTimeLabel" destination="hkC-hQ-dE3" id="bQU-p1-4Y5"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
             </connections>
         </placeholder>
@@ -50,15 +53,15 @@
                         <action selector="autoShutdownAction:" destination="-1" eventType="touchUpInside" id="U94-wf-dV4"/>
                     </connections>
                 </button>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="00:00" textAlignment="center" lineBreakMode="tailTruncation" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="pEq-d0-Dot">
-                    <rect key="frame" x="10" y="450" width="40" height="20"/>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="--:--" textAlignment="center" lineBreakMode="tailTruncation" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="pEq-d0-Dot">
+                    <rect key="frame" x="0.0" y="450" width="50" height="20"/>
                     <color key="backgroundColor" red="0.92167862700385728" green="1" blue="0.066611115740486726" alpha="1" colorSpace="calibratedRGB"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="20" id="6c9-NR-vtw"/>
-                        <constraint firstAttribute="width" constant="40" id="FVc-Ml-MuF"/>
+                        <constraint firstAttribute="width" constant="50" id="FVc-Ml-MuF"/>
                     </constraints>
-                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                    <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                    <fontDescription key="fontDescription" type="system" pointSize="11"/>
+                    <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                     <nil key="highlightedColor"/>
                 </label>
                 <slider opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" minValue="0.0" maxValue="1" translatesAutoresizingMaskIntoConstraints="NO" id="09b-SZ-6Nf">
@@ -68,11 +71,11 @@
                         <action selector="timeSliderAction:" destination="-1" eventType="valueChanged" id="DgR-4d-dsv"/>
                     </connections>
                 </slider>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="00:00" textAlignment="center" lineBreakMode="tailTruncation" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hkC-hQ-dE3">
-                    <rect key="frame" x="550" y="450" width="40" height="20"/>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="--:--" textAlignment="center" lineBreakMode="tailTruncation" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hkC-hQ-dE3">
+                    <rect key="frame" x="550" y="450" width="50" height="20"/>
                     <color key="backgroundColor" red="0.92167862700000003" green="1" blue="0.066611115740000004" alpha="1" colorSpace="calibratedRGB"/>
-                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                    <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                    <fontDescription key="fontDescription" type="system" pointSize="11"/>
+                    <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                     <nil key="highlightedColor"/>
                 </label>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="mxg-bV-73w">
@@ -116,7 +119,7 @@
                         <constraint firstAttribute="height" constant="40" id="Mc2-yD-Q3O"/>
                         <constraint firstAttribute="width" constant="40" id="Zhh-zd-KUh"/>
                     </constraints>
-                    <fontDescription key="fontDescription" type="system" pointSize="9"/>
+                    <fontDescription key="fontDescription" type="system" pointSize="10"/>
                     <state key="normal" title="播放历史">
                         <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                     </state>
@@ -128,13 +131,24 @@
                         <constraint firstAttribute="width" constant="150" id="nZ7-Ts-sfd"/>
                     </constraints>
                     <fontDescription key="fontDescription" type="system" pointSize="20"/>
-                    <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                    <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                     <nil key="highlightedColor"/>
                 </label>
+                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="EIH-rs-s9y">
+                    <rect key="frame" x="12" y="515" width="40" height="40"/>
+                    <fontDescription key="fontDescription" type="system" pointSize="10"/>
+                    <state key="normal" title="播放列表">
+                        <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                    </state>
+                    <connections>
+                        <action selector="ListButtonAction:" destination="-1" eventType="touchUpInside" id="eHE-Fc-wtP"/>
+                    </connections>
+                </button>
             </subviews>
             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
             <constraints>
                 <constraint firstItem="09b-SZ-6Nf" firstAttribute="centerY" secondItem="pEq-d0-Dot" secondAttribute="centerY" id="0ST-Pe-7f3"/>
+                <constraint firstItem="EIH-rs-s9y" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" constant="12" id="0qB-gI-mpF"/>
                 <constraint firstAttribute="bottom" secondItem="t5w-1p-b2u" secondAttribute="bottom" constant="200" id="1gs-gU-gLe"/>
                 <constraint firstItem="t5w-1p-b2u" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" constant="64" id="1xf-I7-61o"/>
                 <constraint firstItem="hkC-hQ-dE3" firstAttribute="top" secondItem="pEq-d0-Dot" secondAttribute="top" id="2fy-OW-AgQ"/>
@@ -143,7 +157,7 @@
                 <constraint firstItem="mxg-bV-73w" firstAttribute="centerX" secondItem="09b-SZ-6Nf" secondAttribute="centerX" id="7E4-6Q-6pm"/>
                 <constraint firstItem="pEq-d0-Dot" firstAttribute="top" secondItem="t5w-1p-b2u" secondAttribute="bottom" constant="50" id="7kw-7J-Rwc"/>
                 <constraint firstItem="69O-Yv-QD7" firstAttribute="height" secondItem="aEG-Hz-PI2" secondAttribute="height" id="7m3-VB-ncn"/>
-                <constraint firstItem="pEq-d0-Dot" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" constant="10" id="8Ru-4z-pgk"/>
+                <constraint firstItem="pEq-d0-Dot" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="8Ru-4z-pgk"/>
                 <constraint firstItem="mxg-bV-73w" firstAttribute="centerY" secondItem="D5s-b6-nFH" secondAttribute="centerY" id="AIJ-WP-5CD"/>
                 <constraint firstAttribute="bottom" secondItem="t5w-1p-b2u" secondAttribute="bottom" constant="150" id="Ai5-Ga-LAK"/>
                 <constraint firstAttribute="trailing" secondItem="aEG-Hz-PI2" secondAttribute="trailing" constant="10" id="B5f-Iu-RRu"/>
@@ -153,17 +167,20 @@
                 <constraint firstItem="ise-wd-RXI" firstAttribute="centerX" secondItem="t5w-1p-b2u" secondAttribute="centerX" id="LiT-iZ-lUH"/>
                 <constraint firstItem="4Qd-Ej-hIg" firstAttribute="centerY" secondItem="245-wy-SYD" secondAttribute="centerY" id="Qjk-nf-jdT"/>
                 <constraint firstItem="t5w-1p-b2u" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" constant="60" id="SNy-LB-lu0"/>
+                <constraint firstItem="4Qd-Ej-hIg" firstAttribute="height" secondItem="EIH-rs-s9y" secondAttribute="height" id="UFB-2P-GfU"/>
                 <constraint firstItem="hkC-hQ-dE3" firstAttribute="width" secondItem="pEq-d0-Dot" secondAttribute="width" id="Vrs-6u-QN7"/>
                 <constraint firstAttribute="trailing" secondItem="245-wy-SYD" secondAttribute="trailing" constant="80" id="Weh-zp-fIL"/>
                 <constraint firstItem="D5s-b6-nFH" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" constant="80" id="XIT-qD-pjj"/>
                 <constraint firstItem="69O-Yv-QD7" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" constant="25" id="XS5-5z-5gG"/>
+                <constraint firstItem="4Qd-Ej-hIg" firstAttribute="centerY" secondItem="EIH-rs-s9y" secondAttribute="centerY" id="bWf-X9-I4z"/>
                 <constraint firstItem="09b-SZ-6Nf" firstAttribute="leading" secondItem="pEq-d0-Dot" secondAttribute="trailing" constant="5" id="bge-sJ-0Qp"/>
                 <constraint firstItem="69O-Yv-QD7" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" constant="5" id="hAX-lt-8Ph"/>
                 <constraint firstItem="t5w-1p-b2u" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" constant="10" id="jYX-jJ-LxW"/>
-                <constraint firstAttribute="trailing" secondItem="hkC-hQ-dE3" secondAttribute="trailing" constant="10" id="jgk-zm-5uB"/>
+                <constraint firstAttribute="trailing" secondItem="hkC-hQ-dE3" secondAttribute="trailing" id="jgk-zm-5uB"/>
                 <constraint firstItem="t5w-1p-b2u" firstAttribute="top" secondItem="aEG-Hz-PI2" secondAttribute="bottom" constant="64" id="lZr-bT-r0q"/>
                 <constraint firstItem="D5s-b6-nFH" firstAttribute="width" secondItem="245-wy-SYD" secondAttribute="width" id="nLE-xq-nZF"/>
                 <constraint firstItem="t5w-1p-b2u" firstAttribute="top" secondItem="aEG-Hz-PI2" secondAttribute="bottom" constant="60" id="nPQ-vJ-ce8"/>
+                <constraint firstItem="4Qd-Ej-hIg" firstAttribute="width" secondItem="EIH-rs-s9y" secondAttribute="width" id="oE9-qb-57n"/>
                 <constraint firstItem="D5s-b6-nFH" firstAttribute="height" secondItem="245-wy-SYD" secondAttribute="height" id="oHB-pg-0B5"/>
                 <constraint firstItem="69O-Yv-QD7" firstAttribute="width" secondItem="aEG-Hz-PI2" secondAttribute="width" id="sWH-Un-g8S"/>
                 <constraint firstAttribute="trailing" secondItem="t5w-1p-b2u" secondAttribute="trailing" constant="10" id="u7s-Q9-gza"/>
