更新播放器, 给specialItem 添加BOOL 值,判断是否有status观察者

--- a/AudioShare/Download/DownloadedCell/DownloadingTableViewCell.xib
+++ b/AudioShare/Download/DownloadedCell/DownloadingTableViewCell.xib
@@ -24,7 +24,7 @@
                         <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="ownerName" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gH8-qt-gQg">
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="nickname" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gH8-qt-gQg">
                         <rect key="frame" x="40" y="55" width="80" height="30"/>
                         <color key="backgroundColor" red="0.5333218502842314" green="1" blue="0.057141478123765022" alpha="1" colorSpace="calibratedRGB"/>
                         <constraints>
