--- a/AudioShare/Player/PlayerViewController.xib
+++ b/AudioShare/Player/PlayerViewController.xib
@@ -84,42 +84,25 @@
                         <action selector="preButtonAction:" destination="-1" eventType="touchUpInside" id="Tu9-9C-YSi"/>
                     </connections>
                 </button>
-                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="4Qd-Ej-hIg">
+                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="4Qd-Ej-hIg">
                     <rect key="frame" x="548" y="515" width="40" height="40"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="40" id="Mc2-yD-Q3O"/>
                         <constraint firstAttribute="width" constant="40" id="Zhh-zd-KUh"/>
                     </constraints>
-                    <fontDescription key="fontDescription" type="system" pointSize="10"/>
-                    <state key="normal" title="播放历史">
+                    <fontDescription key="fontDescription" type="system" pointSize="19"/>
+                    <state key="normal" image="history.png">
                         <color key="titleColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                         <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                     </state>
                     <state key="disabled">
                         <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     </state>
-                    <state key="selected">
+                    <state key="selected" image="history.png">
                         <color key="titleColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                     </state>
                     <connections>
                         <action selector="historyButtonAction:" destination="-1" eventType="touchUpInside" id="4G7-kh-Yoa"/>
-                    </connections>
-                </button>
-                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="EIH-rs-s9y">
-                    <rect key="frame" x="12" y="515" width="40" height="40"/>
-                    <fontDescription key="fontDescription" type="system" pointSize="10"/>
-                    <state key="normal" title="播放列表">
-                        <color key="titleColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
-                        <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
-                    </state>
-                    <state key="disabled">
-                        <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                    </state>
-                    <state key="selected">
-                        <color key="titleColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
-                    </state>
-                    <connections>
-                        <action selector="ListButtonAction:" destination="-1" eventType="touchUpInside" id="eHE-Fc-wtP"/>
                     </connections>
                 </button>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ise-wd-RXI">
@@ -158,6 +141,22 @@
                     <state key="normal" image="undo.png"/>
                     <connections>
                         <action selector="backAction:" destination="-1" eventType="touchUpInside" id="0Zq-aE-sJD"/>
+                    </connections>
+                </button>
+                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="EIH-rs-s9y">
+                    <rect key="frame" x="12" y="515" width="40" height="40"/>
+                    <state key="normal" image="trackList.png">
+                        <color key="titleColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                        <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                    </state>
+                    <state key="disabled">
+                        <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </state>
+                    <state key="selected">
+                        <color key="titleColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                    </state>
+                    <connections>
+                        <action selector="ListButtonAction:" destination="-1" eventType="touchUpInside" id="eHE-Fc-wtP"/>
                     </connections>
                 </button>
             </subviews>
@@ -228,11 +227,13 @@
     </objects>
     <resources>
         <image name="clock.png" width="24" height="24"/>
+        <image name="history.png" width="28" height="28"/>
         <image name="music_fastforward_button.png" width="33" height="33"/>
         <image name="music_play_button.png" width="64" height="64"/>
         <image name="music_rewind_button.png" width="33" height="33"/>
         <image name="placeholder.png" width="512" height="512"/>
-        <image name="playerBackground.jpg" width="526" height="614"/>
+        <image name="playerBackground.jpg" width="1024" height="965"/>
+        <image name="trackList.png" width="28" height="28"/>
         <image name="undo.png" width="18" height="18"/>
     </resources>
 </document>
