--- a/AudioShare/Player/PlayerViewController.xib
+++ b/AudioShare/Player/PlayerViewController.xib
@@ -95,7 +95,7 @@
                     <state key="disabled">
                         <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     </state>
-                    <state key="selected" image="history.png">
+                    <state key="selected">
                         <color key="titleColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                     </state>
                     <connections>
@@ -226,7 +226,6 @@
         </view>
     </objects>
     <resources>
-        <image name="history.png" width="32" height="32"/>
         <image name="history1" width="40" height="40"/>
         <image name="music_fastforward_button.png" width="45" height="45"/>
         <image name="music_play_button.png" width="64" height="64"/>
